tests/expectations/parser/expression/literal/tuple_fail.out
namespace = "ParseExpression"
expectation = "Fail"
outputs = [
    """
Error [EPAR0370029]: A tuple expression must have at least two elements.
    --> test:1:1
     |
   1 | ()
     | ^^""",
    """
Error [EPAR0370029]: A tuple expression must have at least two elements.
    --> test:1:1
     |
   1 | (1u32,)
     | ^^^^^^^""",
    """
Error [EPAR0370029]: A tuple expression must have at least two elements.
    --> test:1:1
     |
   1 | (1field,)
     | ^^^^^^^^^""",
]
